
	DLH:
		* amulegui.xpm icon.

	Gerd78:
		* Added autostart-xas to rpm .spec files.
		* Patch for autoconf >= 2.60.
		* Patch for redefinition of $(docdir) in docs/Makefile.am.
		* Patch for aMule .desktop files.
		* Added amulegui desktop icon (with Vollstrecker).
		* Patch for fixing aMule spec file in Fedora and Mandriva.
		* Test for perl File::Copy in configure.

	GonoszTopi:
		* Added ability to compile amulecmd without threading support.
		* Fixed source seeds handling on startup.
		* Proper restoration of startup locale after checking available
		  locales.
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CC's CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.
		* Added support for magnet ed2k links.
		* Improve cross compilation
		* Fixed segmentation fault in amuled
		* Proper restoration of startup locale after checking available locales
		* Don't allow sources coming from .seeds to be cleaned up for a while
		  after startup
		* Improve accuracy for ticks
		* Improve debug output
		* Don't add clients when shutting down
		* Added a simple (ascii) text file reader class
		* Sed denoiser - removes excessive messages from compilation - 
		  Thanks to Vollstrecker for the idea and discussions.
		* Drop path component from logged file names.
		* Fix for perl v5.8.8
		* wxCas compilation fixes for wxCVS
		* Doxyfile doesn't need to be installed, it's unusable without the sources.
		
		
	Hermit:
		* Patch for amulecmd history which ensures that when the same command
		  is repeated several times in a row it only gets recorded in the
		  history once.

	jcoy:
		* Set download priority in amulecmd.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.
		* Compilation fix for MacOSX 10.3
		* Fixed a crashing bug with static initialization order