@@ -1,3 +1,3 @@
 alc    ICON    "alc.ico"
 
-#include "wx/msw/wx.rc"
+//#include "wx/msw/wx.rc"
